# burn-scar-detection

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  app.py  pyproject.toml  requirements.txt  run_inference.py  run_training.py
cloud/: HF_SPACES_RUNBOOK.md  RUNBOOK.md  run_job.sh  run_optuna.sh  run_optuna_and_retrain.sh  space_README.md
configs/: balanced_config.yaml  finetune_50fires_config.yaml  finetune_60fires_config.yaml  finetune_config.yaml  finetune_optuna_fast.yaml  finetune_test_optuna.yaml  train_50fires_config.yaml  train_60fires_config.yaml  train_config.yaml
data/globfire/: africa_savanna.csv  australia_eucalyptus.csv  canada_boreal.csv  mediterranean_shrubland.csv  siberia_taiga.csv  south_america_cerrado.csv
data/perimeters/: caldor_fire_2021.geojson  dixie_fire_2021.geojson  woolsey_fire_2018.geojson
docs/: METHODOLOGY.md
notebooks/: demo_analysis.ipynb
results/: over_prediction_analysis.md
scripts/: band_stats_v2.py  batch_download_fires.py  brightness_diag.py  build_demo_notebook.py  calibrate_threshold.py  compare_experiments.py  eval_sweep.py  extract_embeddings.py  globfire_to_config.py  launch_cloud_test.sh  launch_eval.sh  launch_optuna_safe.sh  launch_training.sh  launch_training_bulletproof.sh  launch_training_remote.sh  make_finetune_config.py  optuna_search.py  push_to_space.py
src/: data.py  infer.py  model.py  train.py  utils.py  visualize.py
src/app/: streamlit_app.py
