[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burn-scar-detection"
version = "0.1.0"
description = "Wildfire burn scar detection from Sentinel-2 imagery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Evan Kart"}]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "huggingface-hub>=0.20.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "earthaccess>=0.9.0",
    "rasterio>=1.3.0",
    "rioxarray>=0.15.0",
    "xarray>=2023.12.0",
    "h5netcdf>=1.0.0",
    "h5py>=3.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "folium>=0.15.0",
    "streamlit>=1.29.0",
    "streamlit-folium>=0.17.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "dask>=2024.1.0",
    "pillow>=10.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
# Resolve imports against the project venv (otherwise Pylance flags every
# third-party import as unresolved).
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
# Silence false positives from untyped scientific libs: torch re-exports
# from_numpy/softmax/tensor/float32 without listing them in __all__, and
# numpy/rioxarray/earthaccess stubs under-declare array ops and accessors.
reportPrivateImportUsage = "none"
reportOperatorIssue = "none"
reportAttributeAccessIssue = "none"
